# ecal-foxglove-bridge

./: LICENSE  README.md  pyproject.toml
ecal_foxglove_bridge/: README.md  blacklist.json  ecal_foxglove_bridge.build.ps1  ecal_foxglove_bridge.py
python/: ecal-foxglove-bridge.py  requirements.txt
